Add: 로그인 페이지 구현 및 프로젝트 세팅

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SolApplication</string>
+    <string name="app_korea_name">지구 심폐소생SOL</string>
 </resources>
